우선 구현은 한바퀴 돔

--- a/app/src/main/res/layout/dialog_send_call.xml
+++ b/app/src/main/res/layout/dialog_send_call.xml
@@ -5,17 +5,18 @@
     android:orientation="vertical"
     android:padding="20dp">
 
-    <EditText
-        android:id="@+id/edit_name"
+    <TextView
+        android:id="@+id/text_game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="이벤트 이름"
         />
 
     <Spinner
-        android:id="@+id/spinner_vk"
+        android:id="@+id/spinner_event"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp" />
+
 
 </LinearLayout>
