--- a/app/src/main/res/layout/fragment_store_info.xml
+++ b/app/src/main/res/layout/fragment_store_info.xml
@@ -2,6 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:padding="20dp"
+    android:orientation="vertical">
+
+
+
+    <TextView
+        android:id="@+id/text_store_name"
+        android:text="매장이름"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:textColor="@color/black"
+        />
+
+    <Button
+        android:id="@+id/button_money"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="입출금 확인"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_devices"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
