--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -93,4 +93,11 @@
         <item name="android:textColor">@color/gray_21</item>
     </style>
 
+    <style name="Theme.SwitchDateTime" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">#29b6f6</item>
+        <item name="colorPrimaryDark">#03a9f4</item>
+        <item name="android:textColorPrimaryInverse">#e6e6e6</item>
+        <item name="android:textColorSecondaryInverse">#e1e1e1</item>
+    </style>
+
 </resources>
